src/components/AnimalBio/TextBox/TextBox.module.scss
.animalBioText {
  margin-top: 50px;
  margin-inline: 10px;
  display: flex;
  flex-direction: column;
  gap: 20px;

  h3 {
    font-size: 26px;
    font-weight: 500;
    line-height: 130%;
    letter-spacing: 0%;
  }
  p {
    font-size: 18px;
    line-height: 150%;
    letter-spacing: 0%;
  }
  .viewMap {
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
    justify-self: center;
    background-color: transparent;
    color: #f58021;
    text-transform: uppercase;
    gap: 10px;
    outline: none;
    border: none;
    border-radius: 5px;
    margin-block: 50px;
    font-size: 20.27px;
    line-height: 20px;
    max-width: 240px;
    width: 100%;
    height: 74px;
    transition: 0.4s ease-in-out;
    &:hover {
      background-color: #f58021;
      color: #ffffff;
    }
  }
}
.img {
  display: block;
  width: 100%;
  object-fit: cover;
  max-height: 600px;
}
.overlay {
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
}

.animalMap {
  position: relative;
  width: 300px;
  height: 200px;
  border: none;
  overflow: hidden;
  background: transparent;

  iframe {
    width: 100%;
    height: 100%;
    border: none;
  }

  span {
    color: #f58021;
    cursor: pointer;
    position: absolute;
    font-weight: 600;
    font-size: 30px;
    right: 10px;
    top: 10px;
    z-index: 101;
  }
}
@media (min-width: 640px) {
  .animalBioText {
    margin-inline: 20px;
  }
  .textBox {
    display: flex;
    align-items: center;
    gap: 20px;
  }
  .animalBio .img {
    padding-inline: 20px;
  }
}
@media (min-width: 1200px) {
  .animalBioText {
    margin: 0;
    max-width: 500px;
    width: 100%;
  }
  .animalBio {
    max-width: 1120px;
    margin: auto;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    .img {
      max-width: 445px;
      height: 455px;
      padding-inline: 0;
    }
    .viewMap {
      max-width: 240px;
    }
  }
}
@media (min-width: 1920px) {
  .animalBio {
    max-width: 1400px;
    p {
      flex-shrink: 0;
    }
  }
}

